cambio logo y paleta de colores

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -44,7 +44,7 @@ nav {
 	padding: 0 30px;
 	font-size: 40px;
 	line-height: 90px;
-    color: #12A537;    
+    color: #398AB9;    
 }
 
 
@@ -571,7 +571,7 @@ nav a:hover{
 
 header ul li a {
     font-size:medium;
-    border-color: #12A537;
+    border-color: #398AB9;
     padding: 5px 5px;
     
     }
@@ -651,7 +651,7 @@ font-size: 20px;
     background-color: rgb(201, 190, 190);
 }
 .nro{
-    color: #12A537;
+    color: #398AB9;
     font-size: 20px;
 }
 .whatsapp {
